fix overflow

--- a/src/views/post/post.module.css
+++ b/src/views/post/post.module.css
@@ -533,12 +533,6 @@
   bottom: -5px;
 }
 
-.stateString {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 @media (max-width: 640px) {
   .replyQuotePreview {
     margin-right: 10px;
